// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-hint spec: Render logic -> renders with hint text FOO 1`] = `
<amplify-hint>
  <!---->
  <div class="hint">
    FOO
  </div>
</amplify-hint>
`;

exports[`amplify-hint spec: Render logic -> renders with no hint text 1`] = `
<amplify-hint>
  <!---->
  <div class="hint"></div>
</amplify-hint>
`;
